kube/002-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wasmcode-svc
  namespace: wasmcode
spec:
  selector:
    app: wasmcode
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
